--- a/web/static/index.html
+++ b/web/static/index.html
@@ -8,7 +8,8 @@
     <script src="lib/d3/d3.min.js"></script>
     <script src="lib/moment/min/moment.min.js"></script>
     <script src="lib/angular-moment/angular-moment.min.js"></script>
-
+    <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.js"></script>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
@@ -17,6 +18,7 @@
 
     <title>Data Stories!</title>
 
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.css">
     <link rel="stylesheet" href="css/layouts/blog.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js"></script>
